--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -118,7 +119,7 @@
         </blockquote>
         <p>I’ve always sought out opportunities and challenges that are meaningful to me. Although my professional path has taken many twists and turns, I've never stopped engaging my passion to help others and solve problems.</p>
         <p>As a web developer, I enjoy using my obsessive attention to detail, my unequivocal love for making things, and my mission-driven work ethic to literally change the world. That's why I’m excited to make a big impact at a high growth company.</p>
-        <h6><strong>Current Focus: JavaScript Mongo Express React Redux Node  </strong></h6>
+        <h5><strong>Current Focus :</strong> { JavaScript } Mongo Express React Redux NodeJs  </h5>
       </div>
       <!-- change -->
 
@@ -142,7 +143,7 @@
               <li>Setting up Dev Environment</li>
               <li>Linux, Shell Scripting, Cron Jobs</li>
               <li>HTML5, CSS3, and jQuery</li>
-              <li>Object Oriented Programming</li>
+              <li>Object Oriented Programming</li>
               <li>Data Structure And Algos</li>
               <li>Debugging</li>
               <li>Setting up GIT, GITHUB, SSH</li>
@@ -162,6 +163,7 @@
                 <li> <a href="http://18.221.96.119/" target="_blank">PhotoShop To HTML</a></li>
                 <li> <a href="http://18.222.47.54:3000/" target="_blank">React Responsive Navbar Using Flexbox </a></li>
                 <li> <a href="http://18.222.46.252:3000/" target="_blank">Music Playlist Crud Application</a> </li>
+                <li> <a href="https://pacific-springs-28604.herokuapp.com" target="_blank">Live Chat - Socket.IO</a> </li>
             </ul>
           </div>
           <div class="card-action"><span>March 2018 - June 2018</span></div>
@@ -230,8 +232,8 @@
               <li>Managed seasonal booth at multiple Convention Centres, across Canada. E.g. CGTA</li>
             </ul>
             <h6>Accomplishments</h6>
-            <li>Single Handly Managed the entire operations, working directly with the Founder and CEO.</li>
-            <li>Achieved and Exceeded yearly target of 1.4 Mil in revenue</li>
+            <li>Single Handedly Managed the entire operations, working directly with the Founder and CEO.</li>
+            <li>Achieved and Exceeded yearly target of 1.4 Million in revenue</li>
             <ul>
 
             </ul>
@@ -270,7 +272,7 @@
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Crud web app" src="static/img/crud.png" class="activator"></div>
               <div class="card-content"><span class="card-title activator teal-text hoverline">Music Playlist CRUD Application<i class="mdi-navigation-more-vert right"></i></span>
-                <p>Music Playlist App To Create & Manage A Personalized Music Playlist.</p>
+                <p>Music Playlist App To Manage A Personalized Music Playlist.</p>
               </div>
               <div class="card-reveal"><span class="card-title brown-text">Technology<i class="mdi-navigation-close right"></i></span>
                 <ul>
@@ -297,14 +299,14 @@
               </div>
               <div class="card-reveal"><span class="card-title brown-text">Technology<i class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><strong>ReactJs</strong>  CDN</li>
-                  <li><strong>React DOM</strong>  CDN</li>
-                  <li><strong>Babel</strong>  CDN</li>
-                  <li><strong>ES6</strong> React.createClass Component</li>
+                  <li><strong>ReactJs</strong>CDN</li>
+                  <li><strong>React DOM</strong>CDN</li>
+                  <li><strong>Babel</strong>CDN</li>
+                  <li><strong>ES6</strong>React.createClass Component</li>
                 </ul>
                 <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="http://13.58.210.205/" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a>
                   <a
-                    aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/ReactJs_ToDoApp" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
+                    aria-label="Visit the GitHub repo for the React project" href="https://github.com/RohitoOo/ReactJs_ToDoApp" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
                 </div>
               </div>
             </div>
@@ -343,16 +345,17 @@
               </div>
               <div class="card-reveal"><span class="card-title brown-text">Technology<i class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <!-- <li><strong>MongoDb & Mongoose </strong> database</li>
-                  <li><strong>ExpressJs</strong> NodeJs framework</li>
-                  <li><strong>ReactJs</strong> frontend</li>
-                  <li><strong>NodeJs</strong> backend</li>
-                  <li><strong>Concurrently</strong> running multiple commands</li>
-                  <li><strong>Mongoose </strong> object modeling in an asynchronous environment</li> -->
+                  <li><strong>HTML5 </strong> </li>
+                  <li><strong>CSS3</strong> </li>
+                  <li><strong>JavaScript</strong></li>
+                  <li><strong>PhotoShop</strong></li>
+                  <li><strong>Video Background</strong></li>
+
+
                 </ul>
                 <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="http://139.59.27.242:3000/restaurants" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a>
                   <a
-                    aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/React_Meets_Express" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
+                    aria-label="Visit the GitHub repo for the PhotoShop To HTML project" href="https://github.com/RohitoOo/React_Meets_Express" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
                 </div>
               </div>
             </div>
@@ -362,13 +365,13 @@
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Mern Application" src="static/img/mern.png" class="activator"></div>
               <div class="card-content"><span class="card-title activator teal-text hoverline">MERN Application<i class="mdi-navigation-more-vert right"></i></span>
-                <p></p>
+                <p>MERN Shopping List Using Redux State Management</p>
               </div>
               <div class="card-reveal"><span class="card-title brown-text">Technology<i class="mdi-navigation-close right"></i></span>
                 <ul>
                   <li><strong>MongoDb</strong> database</li>
                   <li><strong>ReactJs</strong> frontend</li>
-                  <li><strong>ReactJs</strong>react-redux / reactstrap </li>
+                  <li><strong>ReactJs</strong> react-redux / reactstrap </li>
                   <li><strong>React UI / UX</strong> React Transitions</li>
                   <li><strong>Redux</strong> frontend State Management</li>
                   <li><strong>ExpressJs</strong> NodeJs framework</li>
@@ -377,7 +380,7 @@
                 </ul>
                 <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="http://18.216.26.98:3000/" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a>
                   <a
-                    aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/Mern_Shopping_List" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
+                    aria-label="Visit the GitHub repo for the MERN project" href="https://github.com/RohitoOo/Mern_Shopping_List" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
                 </div>
               </div>
             </div>
@@ -385,24 +388,19 @@
           <!-- 6 -->
           <div class="col s12 m6 l4">
             <div class="card medium">
-              <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Mern Application" src="static/img/mern1.png" class="activator"></div>
-              <div class="card-content"><span class="card-title activator teal-text hoverline">Mern Application<i class="mdi-navigation-more-vert right"></i></span>
-                <p>Mern Shopping List Using Redux State Management</p>
+              <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Live Chat Application" src="static/img/socketio1.png" class="activator"></div>
+              <div class="card-content"><span class="card-title activator teal-text hoverline">Live Chat Application<i class="mdi-navigation-more-vert right"></i></span>
+                <p>Real Time Bi-directional Communication Between Multiple Clients and A Common Server.</p>
               </div>
               <div class="card-reveal"><span class="card-title brown-text">Technology<i class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><strong>MongoDb</strong> database</li>
-                  <li><strong>ReactJs</strong> frontend</li>
-                  <li><strong>ReactJs</strong>react-redux / reactstrap </li>
-                  <li><strong>React UI / UX</strong> React Transitions</li>
-                  <li><strong>Redux</strong> frontend State Management</li>
+                  <li><strong>Socket.IO</strong> Browser And Server</li>
                   <li><strong>ExpressJs</strong> NodeJs framework</li>
-                  <li><strong>NodeJs</strong> backend</li>
-                  <li><strong>Concurrently</strong> running Front And Back End Servers</li>
+                  <li><strong>NodeJs</strong> Backend</li>
                 </ul>
                 <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="http://18.216.26.98:3000/" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a>
                   <a
-                    aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/Mern_Shopping_List" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
+                    aria-label="Visit the GitHub repo for the Web_Sockets project" href="https://github.com/RohitoOo/Web_Sockets.git" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
                 </div>
               </div>
             </div>
@@ -434,6 +432,7 @@
               <div class="col s4 m2"><img alt="" src="static/img/css3.png" class="responsive-img">CSS3</div>
               <div class="col s4 m2"><img alt="" src="static/img/bootstrap.png" class="responsive-img">Bootstrap</div>
               <div class="col s4 m2"><img alt="" src="static/img/materialize.png" class="responsive-img">Materialize</div>
+              <div class="col s4 m2"><img alt="" src="static/img/less.png" class="responsive-img">LESS</div>
             </div>
           </div>
         </div>
@@ -441,11 +440,13 @@
           <div class="card-content">
             <h4 class="brown-text light">Javascript</h4>
             <div class="row text-center">
-              <div class="col s4 m2"><img alt="" src="static/img/react.png" class="responsive-img">React</div>
+              <div class="col s4 m2"><img alt="" src="static/img/react.png" class="responsive-img">ReactJs</div>
               <div class="col s4 m2"><img alt="" src="static/img/javascript.png" class="responsive-img">Javascript</div>
               <div class="col s4 m2"><img alt="" src="static/img/jquery.png" class="responsive-img">jQuery</div>
-              <div class="col s4 m2"><img alt="" src="static/img/nodejs.png" class="responsive-img">Node</div>
+              <div class="col s4 m2"><img alt="" src="static/img/nodejs.png" class="responsive-img">NodeJs</div>
               <div class="col s4 m2"><img alt="" src="static/img/ionic.png" class="responsive-img">Ionic</div>
+              <div class="col s4 m2"><img alt="" src="static/img/socketio.png" class="responsive-img">Socket.IO</div>
+
             </div>
           </div>
         </div>
@@ -491,9 +492,7 @@
               <div class="col s4 m2"><img alt="" src="static/img/slack.png" class="responsive-img">Slack</div>
               <div class="col s4 m2"><img alt="" src="static/img/trello.png" class="responsive-img">Trello</div>
               <div class="col s4 m2"><img alt="" src="static/img/sourceTree.png" class="responsive-img">Source Tree</div>
-
-
-
+              <div class="col s4 m2"><img alt="" src="static/img/jira.png" class="responsive-img">Jira</div>
             </div>
           </div>
         </div>
